--- a/public/style.css
+++ b/public/style.css
@@ -85,7 +85,7 @@ form input[type='submit']:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-#message {
+#message-textarea {
   margin-top: 1.5rem;
   padding: 0.25rem 0.5rem;
   background-color: var(--success);
@@ -96,6 +96,6 @@ form input[type='submit']:hover {
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-#message::hover {
+#message-textarea::hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
